# Krish

./: LICENSE  Makefile  README.md  repo
3dviewer/: README.md  index.html  (+5 more)
IPC_parser/: CMakeLists.txt
IPC_parser/src/: cad_data.cpp  cad_header.cpp  component.cpp  ecad.cpp  ipc2581c.cpp  ipc_assembly_drawing.cpp  ipc_avl.cpp  ipc_avl_header.cpp  ipc_avl_item.cpp  ipc_bom.cpp  ipc_bom_header.cpp  ipc_bom_item.cpp  ipc_component.cpp  ipc_content.cpp  ipc_datum.cpp  ipc_dictionary.cpp  ipc_feature.cpp  ipc_history_record.cpp  ipc_layer.cpp  ipc_layer_feature.cpp  ipc_line.cpp  ipc_lineDescRef.cpp  ipc_location.cpp  ipc_logistic_header.cpp  ipc_marking.cpp  ipc_non_standard_attribute.cpp  ipc_outline.cpp  ipc_package.cpp  ipc_pad.cpp  ipc_padstackdef.cpp  ipc_pick_up_point.cpp  ipc_pin.cpp  ipc_polygon.cpp  ipc_polyline.cpp  ipc_profile.cpp  ipc_set.cpp  ipc_silkscreen.cpp  ipc_step.cpp  ipc_user_special.cpp  ipc_xForm.cpp  (+11 more)
IPC_parser/src/include/: IPCBaselineBoard.h  cad_data.h  cad_header.h  common.h  component.h  ecad.h  ipc2581c.h  ipc_assembly_drawing.h  ipc_avl.h  ipc_avl_header.h  ipc_avl_item.h  ipc_bom.h  ipc_bom_header.h  ipc_bom_item.h  ipc_component.h  ipc_content.h  ipc_datum.h  ipc_dicitionary_font.h  ipc_dictionary.h  ipc_dictionary_color.h  ipc_dictionary_fillDesc.h  ipc_dictionary_firmware.h  ipc_dictionary_font.h  ipc_dictionary_linedesc.h  ipc_dictionary_user.h  ipc_feature.h  ipc_history.h  ipc_layer.h  ipc_layer_feature.h  ipc_line.h  ipc_location.h  ipc_logistic_header.h  ipc_marking.h  ipc_nonStandardAtrribute.h  ipc_outline.h  ipc_package.h  ipc_pad.h  ipc_padStack.h  ipc_padstackdef.h  ipc_pick_up_point.h  (+15 more)
IPC_parser/test/: output.xml  smallest_circuit.xml  tree_output.txt  validation_log.txt  xml_schem_2.xsd  xml_shcema.xsd
ODB_Parser/: CMakeLists.txt
ODB_Parser/include/: ODBAttrListperBoard.h  ODBAttributeLayer.h  ODBBoard.h  ODBBoardEdaData.h  ODBBoardGeometryInfo.h  ODBBoardHeaderInfo.h  ODBComponent.h  ODBFeatureLayer.h  ODBLayer.h  ODBMatrixData.h  ODBMiscAttrList.h  ODBMiscInfoFileData.h  ODBNetListDataPerBoard.h  ODBObj.h  ODBStandardFontsFile.h  ODBSymbolsData.h
ODB_Parser/src/: ODBAttrListperBoard.cpp  ODBBoard.cpp  ODBBoardEdaData.cpp  ODBBoardGeometryInfo.cpp  ODBBoardHeaderInfo.cpp  ODBComponent.cpp  ODBLayer.cpp  ODBMatrix.cpp  ODBMatrixData.cpp  ODBMiscAttrList.cpp  ODBMiscInfoFileData.cpp  ODBNetListDataPerBoard.cpp  ODBObj.cpp  ODBStandardFontsFile.cpp  ODBSymbolsData.cpp  main.cpp
ODB_Parser/test/: info.txt  makefile
ODB_Parser/test/ODB_File/: demofile-odb.tgz
ODB_Parser/testing_diff/: CMakeLists.txt  EdaDatarelaxed_diff.py  compare_attr.py  compare_layer_feature.py  compare_matrix.py  compare_symbols.py  component_diff.py
PCBBaseline/: CMakeLists.txt
PCBBaseline/include/: AComponent.h  BaselineBoard.h  Coordinate.h  FundamentalShape.h  GUIComponent.h  Geomclass.h  GerberImporter.h  Net.h  PCBBoard.h  PCBComponent.h  PCBObj.h  Pin.h  PrintFunctions.h  Symbol.h  Wire.h  attribute.h  json_utils.h  pcb_baseline_pin.h  types.h  utils.h
PCBBaseline/src/: AComponent.cc  BaselineBoard.cc  BaselineBoard.cpp  Coordinate.cc  FundamentalShape.cpp  GUIComponent.cpp  GUIComponentManager.cpp  GUIclient.cpp  GUIclient.js  GUItestcase.cpp  Geomclass.cpp  GerberImporter.cc  Net.cpp  PCB.cpp  PCBBoard.cc  PCBBoard.cpp  PCBComponent.cpp  Pin.cpp  PrintFunctions.cpp  Via.cpp  Wire.cc  Wire.cpp  attribute.cpp  debug_test.cpp  json_utils.cpp  main.cpp  pcb_baseline_pin.cpp  test_manager.cpp  test_new_gui.cpp  zero-client.js  zero-mqb.cc  zero-server.js
gerber_parser/gerber_files/: CMakeLists.txt  Notepad.txt  elements.js  gerberSerializer.js  github.txt  output.js  package-lock.json  package.json  preload.js  tsconfig.json
gerber_parser/gerber_files/src/controllers/: EditorController.ts
gerber_parser/gerber_files/src/interfaces/: Shape.ts
gerber_parser/gerber_files/src/main/: index.js  main.ts
gerber_parser/gerber_files/src/models/: CanonicalShape.ts  ParametricShape.ts  parametricShape.js
gerber_parser/gerber_files/src/parsers/: GerberParser.ts  ShapeSource.ts
gerber_parser/gerber_files/src/renderer/: config.json  index.html  index.js  renderer.ts  styles.css
gerber_parser/gerber_files/src/renderer/@xterm/xterm/src/browser/: Lifecycle.js  LocalizableStrings.js  OscLinkProvider.js  Terminal.js  TimeBasedDebouncer.js
gerber_parser/gerber_files/src/renderer/@xterm/xterm/src/browser/decorations/: ColorZoneStore.js
gerber_parser/gerber_files/src/renderer/@xterm/xterm/src/browser/public/: Terminal.js
gerber_parser/gerber_files/src/renderer/@xterm/xterm/src/browser/services/: CharSizeService.js  ThemeService.js
gerber_parser/gerber_files/src/renderer/@xterm/xterm/src/common/: CircularList.js  Color.js  CoreTerminal.js  EventEmitter.js  MultiKeyMap.js  Platform.js  WindowsMode.js
gerber_parser/gerber_files/src/renderer/@xterm/xterm/src/common/buffer/: AttributeData.js  Buffer.js  BufferLine.js  BufferReflow.js  BufferSet.js  Marker.js
gerber_parser/gerber_files/src/renderer/@xterm/xterm/src/common/data/: Charsets.js  EscapeSequences.js
gerber_parser/gerber_files/src/renderer/@xterm/xterm/src/common/input/: Keyboard.js  UnicodeV6.js  WriteBuffer.js
gerber_parser/gerber_files/src/renderer/@xterm/xterm/src/common/public/: BufferLineApiView.js  BufferNamespaceApi.js  ParserApi.js  UnicodeApi.js
gerber_parser/gerber_files/src/types/: paper.d.ts
gerber_parser/gerber_files/src/viewer/: viewer.ts
gerber_parser/gerber_files/src/viewer/Shapes/: CircleShape.ts
gerber_parser/gerber_files/trial2/: index.html
libSrc/OdbDesign_new/: CMakeLists.txt
libSrc/OdbDesign_new/OdbDesignLib/: CMakeLists.txt  enums.h
libSrc/OdbDesign_new/OdbDesignLib/FileModel/Design/: AttributeLookupTable.cpp  ComponentsFile.cpp  ComponentsFile.h  ContourPolygon.h  EdaDataFile.h  FeaturesFile.cpp  FeaturesFile.h  MatrixFile.h  NetlistFile.cpp  NetlistFile.h  PropertyRecord.h  RgbColor.cpp  StandardFontsFile.cpp  StandardFontsFile.h  StepHdrFile.cpp  StepHdrFile.h  SymbolName.cpp  SymbolName.h
libSrc/OdbDesign_new/Utils/: CMakeLists.txt
(+245 files in other folders)
